# skribbl

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  rustfmt.toml
client/: .prettierrc.cjs  esbuild.config.mjs  package.json  tsconfig.json
client/src/: canvas.ts  chats.ts  consts.ts  dom.ts  env.d.ts  events.ts  index.ts  listener.ts  lobby.ts  socket.ts  state.ts  timer.ts  types.ts  utils.ts  waiting-room.ts
client/src/lib/: lobby.ts  parser.ts  toast.ts  utils.ts
client/src/lib/dom/: list-of-players.ts  room-link.ts  rooms.ts  waiting-room.ts
client/src/lib/socket/: handshake.ts  index.ts
client/src/lib/socket/events/: change-color.ts  end-game.ts  error.ts  new-host.ts  new-round.ts  new-turn.ts  new-user-to-draw.ts  new-word.ts  pick-a-word.ts  pointer-down.ts  pointer-move.ts  pointer-up.ts  reset-room.ts  send-room-info.ts  send-user-info.ts  send-users-in-room.ts  start-game.ts  tick.ts  user-joined.ts  user-left.ts
client/src/styles/: chat.css  controls.css  index.css  list-of-players.css  main.css  resets.css  room-link.css  room.css  root.css
src/: controller.rs  events.rs  fairings.rs  lib.rs  main.rs  model.rs  state.rs  words.txt
src/routes/: index.rs  mod.rs  ws.rs
src/routes/realtime/: mod.rs
src/routes/realtime/socket/: mod.rs  reader.rs  writer.rs
src/utils/: consts.rs  mod.rs  realtime.rs
templates/: index.html.hbs
