[package]
name = "skribbl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
random-string = "1.1.0"
rocket = { version = "0.5.0", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
serde = "1.0.200"
serde_json = "1.0.116"

[dependencies.ws]
package = "rocket_ws"
version = "0.1.0"
